--- a/index.html
+++ b/index.html
@@ -14,17 +14,17 @@
 	<meta name="twitter:creator" content="@lsd_jp">
 	<meta name="twitter:title" content="Bluprint for UX Design">
 	<meta name="twitter:description" content="A paper prototyping app for iPad Pro.">
-	<meta name="twitter:image" content="http://bluprint.lsd.design/assets/images/twcards.png?3">
+	<meta name="twitter:image" content="http://bluprint.node-inc.co/assets/images/twcards.png">
 	
 	<meta property="fb:app_id" content="149060772172657">
     <meta property="og:title" content="Bluprint for UX Design">
 	<meta property="og:type" content="website">
-	<meta property="og:url" content="http://bluprint.lsd.design">
-	<meta property="og:image" content="http://bluprint.lsd.design/assets/images/ogp.png">
+	<meta property="og:url" content="http://bluprint.node-inc.co">
+	<meta property="og:image" content="http://bluprint.node-inc.co/assets/images/ogp.png">
 	<meta property="og:description" content="A paper prototyping app for iPad Pro.">
 	
 	<link rel="stylesheet" href="assets/stylesheets/css/main.css" type="text/css" charset="utf-8">
-	<script src="node_modules/jquery/dist/jquery.min.js" charset="utf-8"></script>
+	<script   src="https://code.jquery.com/jquery-3.1.1.min.js"   integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="   crossorigin="anonymous"></script>
 	<script src="assets/javascripts/main.js" charset="utf-8"></script>
 	<script>
 	</script>
@@ -37,7 +37,7 @@
 		</h1>
 		<nav class="global-header__nav">
 			
-			<a href="mailto:info@lsd.design" class="global-header__contact"></a>
+			<a href="mailto:info@node-inc.co" class="global-header__contact"></a>
 			<a href="http://twitter.com/bluprintapp" target="_blank" class="global-header__twitter"></a>
 		</nav>
 	</header>
@@ -135,7 +135,7 @@
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
   })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-43274546-3', 'auto');
+  ga('create', 'UA-85100221-2', 'auto');
   ga('send', 'pageview');
 
 </script>
