--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html prefix="og: http://ogp.me/ns#">	
-<head> 
+<head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 	
@@ -125,19 +125,9 @@
 		<div class="global-footer__wrapper">
 			<h1 class="global-footer__title">Made by</h1>
 			<address class="global-footer__company">
-				<a href="http://node-inc.co" target="_blank"><img src="assets/images/logo-node.svg" alt="Logo of NoDE inc." class="global-footer__logo"></a>
+				<a href="http://lsd.design" target="_blank"><img src="assets/images/logo-lsd.svg" alt="Logo of NoDE inc." class="global-footer__logo"></a>
 			</address>
 		</div>
 	</footer>
-	<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-85100221-2', 'auto');
-  ga('send', 'pageview');
-
-</script>
 </body>
 </html>
