--- a/index.html
+++ b/index.html
@@ -123,9 +123,8 @@
 	</section>
 	<footer class="global-footer">
 		<div class="global-footer__wrapper">
-			<h1 class="global-footer__title">Made by</h1>
 			<address class="global-footer__company">
-				<a href="http://lsd.design" target="_blank"><img src="assets/images/logo-lsd.svg" alt="Logo of NoDE inc." class="global-footer__logo"></a>
+				&copy;<a href="http://lsd.design" target="_blank"><img src="assets/images/logo-lsd.svg" alt="Logo of NoDE inc." class="global-footer__logo"></a> All Right Reserved.
 			</address>
 		</div>
 	</footer>
