色合いを統一

--- a/index.html
+++ b/index.html
@@ -14,17 +14,17 @@
 	<meta name="twitter:creator" content="@lsd_jp">
 	<meta name="twitter:title" content="Bluprint for UX Design">
 	<meta name="twitter:description" content="A paper prototyping app for iPad Pro.">
-	<meta name="twitter:image" content="http://bluprint.node-inc.co/assets/images/twcards.png">
+	<meta name="twitter:image" content="http://bluprint.lsd.design/assets/images/twcards.png">
 	
 	<meta property="fb:app_id" content="149060772172657">
     <meta property="og:title" content="Bluprint for UX Design">
 	<meta property="og:type" content="website">
-	<meta property="og:url" content="http://bluprint.node-inc.co">
-	<meta property="og:image" content="http://bluprint.node-inc.co/assets/images/ogp.png">
+	<meta property="og:url" content="http://bluprint.lsd.design">
+	<meta property="og:image" content="http://bluprint.lsd.design/assets/images/ogp.png">
 	<meta property="og:description" content="A paper prototyping app for iPad Pro.">
 	
 	<link rel="stylesheet" href="assets/stylesheets/css/main.css" type="text/css" charset="utf-8">
-	<script   src="https://code.jquery.com/jquery-3.1.1.min.js"   integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="   crossorigin="anonymous"></script>
+	<script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="   crossorigin="anonymous"></script>
 	<script src="assets/javascripts/main.js" charset="utf-8"></script>
 	<script>
 	</script>
@@ -37,15 +37,16 @@
 		</h1>
 		<nav class="global-header__nav">
 			
-			<a href="mailto:info@node-inc.co" class="global-header__contact"></a>
+			<a href="mailto:info@lsd.design" class="global-header__contact"></a>
 			<a href="http://twitter.com/bluprintapp" target="_blank" class="global-header__twitter"></a>
 		</nav>
 	</header>
 	<section class="about">
 		<div class="about__wrapper">
 			<img src="assets/images/mock001.png" class="about__capture">
-			<h1 class="about__title">UI Sketch App for iPad.</h1>
-			<p class="about__text">Bluprint is a sketch tool for UX design. It enable you to do paper prototyping of smartphone app anytime, anywhere if only you have an iPad Pro and Apple Pencil. You will no longer suffer from a lot of eraser dusts or scan the paper. Bluprint will strongly support your information design work.</p>
+			<h1 class="about__title">A paper prototyping app for iPad Pro.</h1>
+			
+			<a href="https://itunes.apple.com/us/app/bluprint-for-ux-design/id1125889470" target="_blank" class="about__app-store"><img src="assets/images/appstore.svg" alt="Download on App Store" class="download__store-img"></a>
 		</div>
 	</section>
 	<section class="scale">
@@ -114,11 +115,10 @@
 				<h1 class="download__title">
 					<img src="assets/images/logo.png" alt="logo of Bluprint" class="download__logo">
 				</h1>
-				<h2 class="download__subtitle">UI Sketch App for iPad Pro.</h2>
+				<h2 class="download__subtitle">A paper prototyping app for iPad Pro.</h2>
 			</div>
 			</div>
 		
-			<a href="https://itunes.apple.com/us/app/bluprint-for-ux-design/id1125889470" target="_blank" class="header-links__app-store"><img src="assets/images/appstore.svg" alt="Download on App Store" class="download__store-img"></a>
 		</div>
 	</section>
 	<footer class="global-footer">
