--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 </head>
 
 <body>
+	<div class="wrapper">
 	<header class="global-header">
 		<h1 class="global-header__title">	
 			<img src="assets/images/logo.svg" alt="logo of Bluprint" class="global-header__logo">
@@ -49,6 +50,8 @@
 			<a href="https://itunes.apple.com/us/app/bluprint-for-ux-design/id1125889470" target="_blank" class="about__app-store"><img src="assets/images/appstore.svg" alt="Download on App Store" class="download__store-img"></a>
 		</div>
 	</section>
+	</div>
+	<!--
 	<section class="scale">
 		<div class="scale__image-box">
 			<figure class="scale__capture"></figure>
@@ -121,6 +124,7 @@
 		
 		</div>
 	</section>
+	-->
 	<footer class="global-footer">
 		<div class="global-footer__wrapper">
 			<address class="global-footer__company">
