--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 	
-	<title>Bluprint for UX Design</title>
+	<title>bluprint - A paper prototyping app for iPad Pro</title>
 	<link rel="icon" href="/favicon.ico">
 	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 	<meta name="description" content="A paper prototyping app for iPad Pro.">
@@ -17,7 +17,7 @@
 	<meta name="twitter:image" content="http://bluprint.lsd.design/assets/images/twcards.png">
 	
 	<meta property="fb:app_id" content="149060772172657">
-    <meta property="og:title" content="Bluprint for UX Design">
+    <meta property="og:title" content="bluprint - A paper prototyping app for iPad Pro">
 	<meta property="og:type" content="website">
 	<meta property="og:url" content="http://bluprint.lsd.design">
 	<meta property="og:image" content="http://bluprint.lsd.design/assets/images/ogp.png">
