--- a/index.html
+++ b/index.html
@@ -50,7 +50,6 @@
 			<a href="https://itunes.apple.com/us/app/bluprint-for-ux-design/id1125889470" target="_blank" class="about__app-store"><img src="assets/images/appstore.svg" alt="Download on App Store" class="download__store-img"></a>
 		</div>
 	</section>
-	</div>
 	<section class="stylus">
 		<div class="stylus__wrapper">
 			<h1 class="stylus__title">Compatible with Apple Pencil</h1>
@@ -124,12 +123,22 @@
 		
 		</div>
 	</section>
+	</div>
 	<footer class="global-footer">
 		<div class="global-footer__wrapper">
 			<address class="global-footer__company">
-				&copy;<a href="http://lsd.design" target="_blank"><img src="assets/images/logo-lsd.svg" alt="Logo of NoDE inc." class="global-footer__logo"></a> All Right Reserved.
+				&copy;<a href="http://lsd.design" target="_blank"><img src="assets/images/logo-lsd.svg" alt="Logo of lsd" class="global-footer__logo"></a> All Right Reserved.
 			</address>
 		</div>
 	</footer>
+	<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-43274546-3', 'auto');
+  ga('send', 'pageview');
+</script>
 </body>
 </html>
